admin role alignment fixes

--- a/web-client/src/assets/scss/_global.scss
+++ b/web-client/src/assets/scss/_global.scss
@@ -70,6 +70,15 @@ body {
   }
 }
 
+.user-dropdown-wrapper {
+  .user {
+    color: $gray-44;
+    bottom: rem(-8px);
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
 // Page Content Class
 .template-content,
 .login-content,
