--- a/web-client/src/components/Plate/Plate.scss
+++ b/web-client/src/components/Plate/Plate.scss
@@ -96,7 +96,7 @@
   padding: 2rem;
 
   .wrapper-title {
-    color: #707070;
+    color: $gray-44;
   }
 }
 
